@@ -201,6 +201,8 @@ S3method(logLik,svrepglm)
 S3method(extractAIC,svyglm)
 S3method(extractAIC,svrepglm)
 S3method(extractAIC,svyglm)
+S3method(extractAIC,svylm)
+S3method(extractAIC,svyreplm)
 S3method(anova,svyglm)
 S3method(AIC,svyglm)
 S3method(BIC,svyglm)
