@@ -35,6 +35,7 @@ requests from users, including:
   Jacques Ferrez
   Natalie Gallagher
   Daniella Gollinelli
+  Barry Graubard
   Alistair Gray
   James Greiner
   Zachary Grinspan
@@ -55,7 +56,8 @@ requests from users, including:
   Alex Kowarik
   Michael Laviolette
   Thomas Leeper
-  Klaus Ignacio Lehmann Melendez 
+  Klaus Ignacio Lehmann Melendez
+  Benmei Liu
   Sebastien Lucie
   Jean Paul Lucas
   Lisa McShane
