@@ -14,6 +14,8 @@ A method for the \code{\link{anova}} function, for use on \code{\link{svyglm}} o
  method = c("LRT", "Wald"), tolerance = 1e-05, ..., force = FALSE)
 \method{AIC}{svyglm}(object,...,k=2, null_has_intercept=TRUE)
 \method{BIC}{svyglm}(object,...,maximal)
+\method{extractAIC}{svylm}(object,scale,k=2, null_has_intercept=TRUE)
+
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -35,6 +37,7 @@ A method for the \code{\link{anova}} function, for use on \code{\link{svyglm}} o
   \item{\dots}{
   For \code{AIC} and \code{BIC}, optionally more \code{svyglm} objects
 }
+\item{scale}{not used}
 \item{null_has_intercept}{Does the null model for AIC have an intercept or
   not? }
   \item{force}{
@@ -57,6 +60,8 @@ on regression coefficients from the maximal model implied by each
 submodel (ie, the models that say some coefficients in the maximal model
 are zero) (Lumley and Scott, 2015). It corresponds to comparing the models with a Wald test and replacing the sample size in the penalty by an effective sample size.
 For computational reasons, the models must not only be nested, the names of the coefficients must match.
+
+\code{extractAIC} for a model with a Gaussian link uses the actual AIC based on maximum likelihood estimation of the variance parameter as well as the regression parameters.
 
 }
 \value{
